2011-04-29  Beth Dakin  <bdakin@apple.com>

        Reviewed by Simon Fraser.

        https://bugs.webkit.org/show_bug.cgi?id=59846
        Scrolling causes rounded bottom window corners to become square
        <rdar://problem/9234239>

        Keep track of the m_windowBottomCornerIntersectionRect in WKView. 
        Invalidate the rect before scrolling. And if the rect is non-zero during a 
        display, mask the corners, then set the rect to zero so that only displays that 
        happen right after a scroll bother to do this.
        * UIProcess/API/mac/PageClientImpl.mm:
        (WebKit::PageClientImpl::scrollView):
        * UIProcess/API/mac/WKView.mm:
        (-[WKView displayIfNeeded]):
        (-[WKView _cacheWindowBottomCornerRect]):
        * UIProcess/API/mac/WKViewInternal.h:

2011-04-29  Jia Pu  <jpu@apple.com>

        Reviewed by Sam Weinig.

        [Mac] Scrolling WK2 window should dismiss autocorrection panel.
        https://bugs.webkit.org/show_bug.cgi?id=59809
        <rdar://problem/9317410>

        * UIProcess/WebPageProxy.cpp:
        (WebKit::WebPageProxy::pageDidScroll): Dimiss autocorrection panel in this function.

2011-04-29  Alexey Proskuryakov  <ap@apple.com>

        Reviewed by Dan Bernstein.

        WebKit2: Typing with Input methods still enters Roman characters in Safari search field frequently
        https://bugs.webkit.org/show_bug.cgi?id=59829
        <rdar://problem/9336907>

        This patch regresses behavior somewhat in that inline input isn't discarded when something
        happens in an inactive window. This doesn't work well in shipping Safari either.

        * UIProcess/API/mac/WKView.mm:
        (-[WKView _notifyInputContextAboutDiscardedComposition]): Added a method that calls
        -discardMarkedText with a safety check.
        (-[WKView setMarkedText:selectedRange:replacementRange:]): Use it.
        (-[WKView _updateTextInputStateIncludingSecureInputState:]): Use it.